Bug 1042860 - Handle animated attribute changes on descendants of SVG <text> elements. r=dholbert